# 3rdPartyAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gx/roaming2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gx/roaming2/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gx/roaming2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libfreetype/: CMakeLists.txt
libfreetype/src/androidTest/java/com/gx/libfreetype/: ExampleInstrumentedTest.java
libfreetype/src/main/: AndroidManifest.xml
libfreetype/src/main/cpp/: native-lib.cpp
libfreetype/src/main/java/com/gx/libfreetype/: RoamingNative.java
libfreetype/src/test/java/com/gx/libfreetype/: ExampleUnitTest.java
libjpeg/: CMakeLists.txt
libjpeg/src/androidTest/java/com/gx/libjpeg/: ExampleInstrumentedTest.java
libjpeg/src/main/: AndroidManifest.xml
libjpeg/src/main/cpp/: jdhuff.h  native-lib.cpp
libjpeg/src/main/java/com/gx/libjpeg/: RoamingNative.java
libjpeg/src/test/java/com/gx/libjpeg/: ExampleUnitTest.java
libpng/: CMakeLists.txt
libpng/src/androidTest/java/com/gx/libpng/: ExampleInstrumentedTest.java
libpng/src/main/: AndroidManifest.xml
libpng/src/main/cpp/: native-lib.cpp
libpng/src/main/java/com/gx/libpng/: RoamingNative.java
libpng/src/test/java/com/gx/libpng/: ExampleUnitTest.java
libtiff/: CMakeLists.txt  build.gradle
libtiff/src/androidTest/java/com/gx/libtiff/: ExampleInstrumentedTest.java
libtiff/src/main/: AndroidManifest.xml
libtiff/src/main/cpp/: native-lib.cpp
libtiff/src/main/java/com/gx/libtiff/: RoamingNative.java
libtiff/src/test/java/com/gx/libtiff/: ExampleUnitTest.java
libzlib/: CMakeLists.txt  build.gradle
libzlib/src/androidTest/java/com/gx/libzlib/: ExampleInstrumentedTest.java
libzlib/src/main/: AndroidManifest.xml
libzlib/src/main/cpp/: native-lib.cpp
libzlib/src/main/java/com/gx/libzlib/: RoamingNative.java
libzlib/src/test/java/com/gx/libzlib/: ExampleUnitTest.java
roaming/: CMakeLists.txt  build.gradle
roaming/src/androidTest/java/com/gx/roaming/: ExampleInstrumentedTest.java
roaming/src/main/: AndroidManifest.xml
roaming/src/main/cpp/: native-lib.cpp
roaming/src/main/java/com/gx/roaming/: RoamingNative.java
